# serializer version: 1
# name: TestUserAdmin.test_admin_detail_password_field[normal password]
  '''
  <div class="form-row field-password_is_temporary">
      <div>
          <div class="flex-container">
              <label for="id_password_is_temporary">
                  Mot de passe :
              </label>
              <div>
                  <p>
                      Pour remplacer le mot de passe avec un mot de passe temporaire,
          utilisez
                      <a href="../password">
                          ce formulaire
                      </a>
                      .
                  </p>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestUserAdmin.test_admin_detail_password_field[temporary password]
  '''
  <div class="form-row field-password_is_temporary">
      <div>
          <div class="flex-container">
              <label for="id_password_is_temporary">
                  Mot de passe :
              </label>
              <div>
                  <p>
                      <img alt="True" src="/static/admin/img/icon-alert.svg"/>
                      Mot de passe temporaire
                  </p>
                  <p>
                      Pour remplacer le mot de passe avec un mot de passe temporaire,
          utilisez
                      <a href="../password">
                          ce formulaire
                      </a>
                      .
                  </p>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestUserAdmin.test_admin_password_update
  '''
  <form id="user_form" method="post">
      <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
      <input class="hidden" name="username" type="text" value="11111111-1111-1111-1111-111111111111"/>
      <div>
          <p>
              Saisissez un nouveau mot de passe pour l’utilisateur
              <strong>
                  John Doe — admin@mailinator.net
              </strong>
              .
          </p>
          <fieldset class="module aligned">
              <div class="mb-3 required">
                  <label class="form-label" for="id_password">
                      Mot de passe
                  </label>
                  <input autocomplete="new-password" autofocus="" class="form-control password-with-instructions" id="id_password" name="password" placeholder="Mot de passe" required="" type="text"/>
              </div>
              <small class="form-text text-muted">
                  <ul class="list-unstyled">
                      <li>
                          <i class="ri-close-circle-line text-warning" id="pw-length">
                          </i>
                          12 caractères minimum
                      </li>
                      <li>
                          <i class="ri-close-circle-line text-warning" id="pw-digit">
                          </i>
                          1 chiffre
                      </li>
                      <li>
                          <i class="ri-close-circle-line text-warning" id="pw-lower">
                          </i>
                          1 minuscule
                      </li>
                      <li>
                          <i class="ri-close-circle-line text-warning" id="pw-upper">
                          </i>
                          1 majuscule
                      </li>
                      <li>
                          <i class="ri-close-circle-line text-warning" id="pw-special-char">
                          </i>
                          1 caractère spécial (ex: & é @ -)
                      </li>
                  </ul>
              </small>
          </fieldset>
          <div class="submit-row">
              <input class="default" type="submit" value="Modifier le mot de passe"/>
          </div>
      </div>
  </form>
  
  '''
# ---
